--- a/parent/dynatrace2RemedyEngine/pom.xml
+++ b/parent/dynatrace2RemedyEngine/pom.xml
@@ -256,6 +256,13 @@
             <version>10.14.1.0</version>
             <type>jar</type>
         </dependency>
+         <dependency>
+            <groupId>Reply-Jboss</groupId>
+            <artifactId>jbosssx</artifactId>
+            <version>2.0.4</version>
+            <type>jar</type>
+        </dependency>
+        
      </dependencies>
    	
 </project>
