Call for APP and insert into DB part 2

--- a/parent/dynatrace2RemedyEngine/src/main/resources/ADR.properties
+++ b/parent/dynatrace2RemedyEngine/src/main/resources/ADR.properties
@@ -1,8 +1,13 @@
 #specificare tutte le dashboard
-DASHBOARD_URLS=ADBM;BOL;TAXI
+DASHBOARD_NAMES=SVILUPPO
 
-ADBM=https://TEST_SERVER:8021/rest/management/dashboard/ADBM_TEST_REMEDY_INTEGRATION
-BOL=https://TEST_SERVER:8021/rest/management/dashboard/BOL_TEST_REMEDY_INTEGRATION
-TAXI=https://TEST_SERVER:8021/rest/management/dashboard/TAXI_TEST_REMEDY_INTEGRATION
+SVILUPPO_URL=https://dynatracereply.adr.it:8021/rest/management/dashboard/IncidentDashboard
+SVILUPPO_USER=Remedy_Integration
+SVILUPPO_PWD=remedy
 
-#TEST_SERVER=192.168.175.57
+
+#DASHBOARD_NAMES=ADBM;BOL;TAXI
+
+#ADBM=https://TEST_SERVER:8021/rest/management/dashboard/ADBM_TEST_REMEDY_INTEGRATION
+#BOL=https://TEST_SERVER:8021/rest/management/dashboard/BOL_TEST_REMEDY_INTEGRATION
+#TAXI=https://TEST_SERVER:8021/rest/management/dashboard/TAXI_TEST_REMEDY_INTEGRATION
