Remedy Communication Resolved with HTTPS (TLSv1.2)

--- a/parent/dynatrace2RemedyEngine/src/main/resources/ADR.properties
+++ b/parent/dynatrace2RemedyEngine/src/main/resources/ADR.properties
@@ -1,14 +1,41 @@
 #specificare tutte le dashboard
-DASHBOARD_NAMES=SVILUPPO
+#DASHBOARD_NAMES=SVILUPPO
+DASHBOARD_NAMES=ADBM;TAXI
+#DASHBOARD_NAMES=ADBM;BOL;TAXI
 
 SVILUPPO_URL=https://dynatracereply.adr.it:8021/rest/management/dashboard/IncidentDashboard
 SVILUPPO_USER=Remedy_Integration
 SVILUPPO_PWD=remedy
 
-REMEDY_AUTH_INFO_USER=RemedyUsr
-REMEDY_AUTH_INFO_PWD=RemedyPwd
-#DASHBOARD_NAMES=ADBM;BOL;TAXI
+ADBM_URL=https://dynatrace-sub-CA:8021/rest/management/dashboard/ADBM_TEST_REMEDY_INTEGRATION
+ADBM_USER=admin
+ADBM_PWD=adradmin01
+ADBM_FIRSTNAME=adradmin01
+ADBM_IMPACT=adradmin01
+ADBM_LASTNAME=adradmin01
+ADBM_REPORTED_SOURCE=adradmin01
+ADBM_SERVICE_TYPE=adradmin01
+ADBM_TYCKET_STATUS=adradmin01
+ADBM_URGENCY=adradmin01
 
-#ADBM=https://TEST_SERVER:8021/rest/management/dashboard/ADBM_TEST_REMEDY_INTEGRATION
-#BOL=https://TEST_SERVER:8021/rest/management/dashboard/BOL_TEST_REMEDY_INTEGRATION
-#TAXI=https://TEST_SERVER:8021/rest/management/dashboard/TAXI_TEST_REMEDY_INTEGRATION
+
+TAXI_URL=https://dynatrace-sub-ca:8021/rest/management/dashboard/TAXI_TEST_REMEDY_INTEGRATION
+TAXI_USER=admin
+TAXI_PWD=adradmin01
+
+#REMEDY 
+REMEDY_AUTH_INFO_USER=RemedyUsr
+REMEDY_AUTH_INFO_PWD=RemedyPwd         
+
+
+String firstName=Dynatrace;       
+String impact;    
+#Impact (1-Extensive/Widespread,2-Significant/Large,3-Moderate/Limited,4-Minor/Localized)      
+String lastName=Dynatrace;        
+String reported_source=Systems Management
+String serivceType=Infrastructure Event
+String ticketStatus=New
+String urgency;         
+#1-Critical,2-High,3-Medium,4-Low
+
+ 
