--- a/parent/dynatrace2RemedyEngine/src/main/resources/ADR.properties
+++ b/parent/dynatrace2RemedyEngine/src/main/resources/ADR.properties
@@ -1,6 +1,7 @@
 #specificare tutte le dashboard
 #DASHBOARD_NAMES=SVILUPPO
-DASHBOARD_NAMES=ADBM;TAXI
+#DASHBOARD_NAMES=ADBM;TAXI
+DASHBOARD_NAMES=ADBM
 #DASHBOARD_NAMES=ADBM;BOL;TAXI
 
 SVILUPPO_URL=https://dynatracereply.adr.it:8021/rest/management/dashboard/IncidentDashboard
@@ -10,18 +11,25 @@ SVILUPPO_PWD=remedy
 ADBM_URL=https://dynatrace-sub-CA:8021/rest/management/dashboard/ADBM_TEST_REMEDY_INTEGRATION
 ADBM_USER=admin
 ADBM_PWD=adradmin01
-ADBM_FIRSTNAME=adradmin01
-ADBM_IMPACT=adradmin01
-ADBM_LASTNAME=adradmin01
-ADBM_REPORTED_SOURCE=adradmin01
-ADBM_SERVICE_TYPE=adradmin01
-ADBM_TYCKET_STATUS=adradmin01
-ADBM_URGENCY=adradmin01
+ADBM_FIRSTNAME=Dynatrace
+ADBM_IMPACT=2-Significant/Large
+ADBM_LASTNAME=Dynatrace
+ADBM_REPORTED_SOURCE=Systems Management
+ADBM_SERVICE_TYPE=Infrastructure Event
+ADBM_TICKET_STATUS=New
+ADBM_URGENCY=2-High
 
 
 TAXI_URL=https://dynatrace-sub-ca:8021/rest/management/dashboard/TAXI_TEST_REMEDY_INTEGRATION
 TAXI_USER=admin
 TAXI_PWD=adradmin01
+TAXI_FIRSTNAME=Dynatrace
+TAXI_IMPACT=1-Extensive/Widespread
+TAXI_LASTNAME=Dynatrace
+TAXI_REPORTED_SOURCE=Systems Management
+TAXI_SERVICE_TYPE=Infrastructure Event
+TAXI_TICKET_STATUS=New
+TAXI_URGENCY=1-Critical
 
 #REMEDY 
 REMEDY_AUTH_INFO_USER=RemedyUsr
