--- a/parent/dynatrace2RemedyEngine/pom.xml
+++ b/parent/dynatrace2RemedyEngine/pom.xml
@@ -262,7 +262,23 @@
             <version>2.0.4</version>
             <type>jar</type>
         </dependency>
+
+<!-- Quartz -->
+        <!--<dependency>
+            <groupId>Reply-Quartz</groupId>
+            <artifactId>quartz-all</artifactId>
+            <version>2.1.3</version>
+            <type>jar</type>
+        </dependency>   -->     
+	<!-- Quartz -->
+        <dependency>
+            <groupId>Reply-Quartz</groupId>
+            <artifactId>quartz-all</artifactId>
+            <version>2.1.3</version>
+            <type>jar</type>
+        </dependency>
         
+
      </dependencies>
    	
 </project>
